--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,8 +1,9 @@
 name: Enterprise Fork Sync Center
 
 on:
+# All cron times are UTC (China = UTC+8)
   schedule:
-    - cron: "55 17 * * *"   # 每6小时
+    - cron: "0 10 * * *"   # 每6小时
   workflow_dispatch:
 
 jobs:
